--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ authors = [
 dependencies = [
     "openai>=1.43.0",
     "fastapi[all]>=0.112.2",
+    "aiohttp>=3.10.5",
 ]
 readme = "README.md"
 requires-python = ">= 3.8"
