--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,3 +26,6 @@ allow-direct-references = true
 
 [tool.hatch.build.targets.wheel]
 packages = ["src/izagent"]
+
+[tool.rye.scripts]
+dev = { cmd = ["uvicorn", "izagent.main:api", "--reload"] }
