--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,14 +2,8 @@
 name = "izagent"
 version = "0.1.0"
 description = "Add your description here"
-authors = [
-    { name = "TATA", email = "evadcmd@gmail.com" }
-]
-dependencies = [
-    "openai>=1.43.0",
-    "fastapi[all]>=0.112.2",
-    "aiohttp>=3.10.5",
-]
+authors = [{ name = "TATA", email = "evadcmd@gmail.com" }]
+dependencies = ["openai>=1.43.0", "fastapi[all]>=0.112.2", "aiohttp>=3.10.5"]
 readme = "README.md"
 requires-python = ">= 3.8"
 
@@ -19,7 +13,11 @@ build-backend = "hatchling.build"
 
 [tool.rye]
 managed = true
-dev-dependencies = []
+dev-dependencies = [
+  "pytest>=8.3.2",
+  "pytest-asyncio>=0.24.0",
+  "pytest-cov>=5.0.0",
+]
 
 [tool.hatch.metadata]
 allow-direct-references = true
@@ -29,3 +27,4 @@ packages = ["src/izagent"]
 
 [tool.rye.scripts]
 dev = { cmd = ["uvicorn", "izagent.main:api", "--reload"] }
+test = { cmd = ["pytest", "--cov", "-s"] }
