--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,12 @@ name = "izagent"
 version = "0.1.0"
 description = "Add your description here"
 authors = [{ name = "TATA", email = "evadcmd@gmail.com" }]
-dependencies = ["openai>=1.43.0", "fastapi[all]>=0.112.2", "aiohttp>=3.10.5"]
+dependencies = [
+    "openai>=1.43.0",
+    "fastapi[all]>=0.112.2",
+    "aiohttp>=3.10.5",
+    "concurrent-log-handler>=0.9.25",
+]
 readme = "README.md"
 requires-python = ">= 3.8"
 
