--- a/log.conf
+++ b/log.conf
@@ -1,5 +1,5 @@
 [loggers]
-keys = root, archive, izagent.error, uvicorn.error
+keys = root, archive, iiza.error, uvicorn.error
 
 [handlers]
 keys = console, file.archive, file.error
@@ -16,10 +16,10 @@ level = DEBUG
 handlers = console, file.archive
 qualname = archive
 
-[logger_izagent.error]
+[logger_iiza.error]
 level = ERROR
 handlers = console, file.error
-qualname = izagent.error
+qualname = iiza.error
 
 [logger_uvicorn.error]
 level = ERROR
@@ -34,13 +34,13 @@ args = (sys.stdout,)
 [handler_file.archive]
 class = handlers.ConcurrentRotatingFileHandler
 formatter = fmt.default
-args = ('.log/izagent.log', 'a')
+args = ('.log/iiza.log', 'a')
 kwargs = {'backupCount': 20, 'maxBytes': 1048576, 'use_gzip': True}
 
 [handler_file.error]
 class = handlers.ConcurrentRotatingFileHandler
 formatter = fmt.default
-args = ('.log/izagent.err.rlog', 'a')
+args = ('.log/iiza.err.rlog', 'a')
 kwargs = {'backupCount': 20, 'maxBytes': 1048576, 'use_gzip': True}
 
 [formatter_fmt.default]
