--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "izagent"
+name = "iiza"
 version = "0.1.0"
 description = "Add your description here"
 authors = [{ name = "TATA", email = "evadcmd@gmail.com" }]
