--- a/log.conf
+++ b/log.conf
@@ -40,7 +40,7 @@ kwargs = {'backupCount': 20, 'maxBytes': 1048576, 'use_gzip': True}
 [handler_file.error]
 class = handlers.ConcurrentRotatingFileHandler
 formatter = fmt.default
-args = ('.log/iiza.err.rlog', 'a')
+args = ('.log/iiza.err.log', 'a')
 kwargs = {'backupCount': 20, 'maxBytes': 1048576, 'use_gzip': True}
 
 [formatter_fmt.default]
